--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,14 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+h1,
+div {
+  margin: 0;
+  padding: 0;
+}
+body {
+  overflow-x: hidden;
+}
 
 a {
   color: inherit;
@@ -15,12 +23,27 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
   body {
     color: white;
     background: black;
+  }
+} */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .container-out {
+    @apply flex justify-center items-center py-4 w-screen;
+  }
+  .container-in {
+    @apply flex justify-between items-center w-[800px];
+  }
+  .container-col {
+    @apply flex flex-col justify-center items-center;
   }
 }
