--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,14 @@ div {
   margin: 0;
   padding: 0;
 }
+h2 {
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+p {
+  font-size: 11px;
+  font-weight: bold;
+}
 body {
   overflow-x: hidden;
 }
@@ -21,6 +29,55 @@ a {
 
 * {
   box-sizing: border-box;
+}
+.bgSize {
+  background-size: 100vh 100vw;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px black;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #cb9b27;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ab7b07;
+}
+.textStyle {
+  font-weight: 700;
+  text-align: center;
+  font-size: 50px;
+  font-family: Hack, sans-serif;
+  text-transform: uppercase;
+  background: linear-gradient(270deg, #ab7b07, #fff, #ab7b07);
+  letter-spacing: 5px;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: shine 5s linear infinite;
+  position: relative;
+}
+
+@keyframes shine {
+  0% {
+    background-position-x: -500%;
+  }
+  100% {
+    background-position-x: 500%;
+  }
 }
 
 /* @media (prefers-color-scheme: dark) {
