--- a/styles/Wordpress.css
+++ b/styles/Wordpress.css
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 4rem;
   gap: 1rem;
+  max-width: 800px;
 }
 .wordpress h3 {
   font-weight: bold;
@@ -13,4 +14,8 @@
 .wordpress p {
   font-weight: lighter;
   font-size: 0.8rem;
+}
+.wordpress iframe {
+  width: 700px;
+  height: 370px;
 }
